# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitattributes  .gitconfig  .gitignore  .install-password-manager.sh  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  FAQ.md  ONBOARDING.md  README.md  TODO.md  dot_bashrc  dot_bashrc.tmpl  dot_gitconfig  dot_profile  dot_wakatime.cfg.tmpl  dot_zshrc  dot_zshrc.tmpl  executable_dot_bash_aliases  package.json  run_onchange_install-packages.sh.tmpl
.ignored_keys/: privateDomain.age
.zed/: settings.json
docs/: ai-config-strategy.md  meta-configs.md  platform-detection.md  symlink-patterns.md
home/: .before-source-state.sh  .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .chezmoiremove  .install-password-manager.sh  claude-settings.json  claude-settings.json.tmpl  dot_Xmodmap  dot_bashrc.tmpl  dot_gitconfig  dot_gitconfig.tmpl  dot_p10k.zsh  dot_profile  dot_tmux.conf  dot_wakatime.cfg.tmpl  dot_zshrc.tmpl  encrypted_domain.txt.age  encrypted_private_dot_passwd-s3fs.age  executable_dot_bash_aliases  executable_dot_bash_aliases.tmpl  executable_modify_dot_npmrc  modify_dot_claude.json.tmpl  (+15 more)
tools/guard/: Cargo.toml  DESIGN.md  clippy.toml
tools/guard/src/: approval.rs  hook.rs  lib.rs  main.rs  nested.rs  parse.rs  rules.rs  run.rs  tap.rs
tools/guard/src/approval/: tests.rs
tools/guard/src/hook/: tests.rs
tools/guard/src/nested/: tests.rs
tools/guard/src/parse/: tests.rs
tools/guard/src/rules/: tests.rs
tools/guard/src/run/: tests.rs
tools/guard/src/tap/: tests.rs
tools/guard/tests/: equivalence.rs
(+356 files in other folders)
