[package]
name = "guard"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Transparent pipeline capture for Claude Code's Bash tool"

[[bin]]
name = "guard"
path = "src/main.rs"

[lib]
name = "guard"
path = "src/lib.rs"

[dependencies]
brush-parser = "0.4"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
disallowed_macros = "deny"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[dev-dependencies]
assert2 = "0.4.0"
proptest = "1.11.0"
rstest = "0.26.1"
